[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tanglement"
version = "0.1.0"
description = "Bayesian DAG inference for quantum entanglement detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "tanglement authors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pgmpy>=1.0",
    "pymc>=5.0",
    "arviz>=0.15",
]

[project.optional-dependencies]
sdp = ["cvxpy>=1.3"]
all = ["cvxpy>=1.3", "matplotlib>=3.7"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "cvxpy>=1.3",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/tanglement/tanglement"
Documentation = "https://tanglement.readthedocs.io"
Repository = "https://github.com/tanglement/tanglement"
Issues = "https://github.com/tanglement/tanglement/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "pymc: marks tests requiring PyMC MCMC sampling",
]

[tool.coverage.run]
source = ["tanglement"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
